# HMM-LM

./: .project  Copy of Makefile  Makefile  basicProbability.cpp  basicProbability.h  configure  configure.ac  createVocab  createVocab.cpp  distribution.cpp  distribution.h  evalHMM.cpp  evalIter  evalIter.cpp  getNearestNeighbors.cpp  hmm.cpp  hmm.h  svd.cpp  testHMM  testHMM.cpp  trainGibbs.cpp  trainHMM  trainHMM.cpp  trainIter.cpp  translateFile  translateFile.cpp  u.hpp  utilities.cpp  utilities.h  utilities.hpp
.svn/: all-wcprops  entries
.svn/text-base/: distribution.cpp.svn-base  distribution.h.svn-base  hmm.h.svn-base  trainIter.cpp.svn-base  translateFile.cpp.svn-base  utilities.h.svn-base  utilities_template.cpp.svn-base
